# touch-sdk-py

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  README.md  py2unity_installer.cfg  pyproject.toml
examples/: basic.py  basic_threaded.py  custom_data.py  flick_experimental.py  magnetometer.py  midi.py  midi_usb.py  mouse.py  osc.py  osc_client_server.py  osc_client_server_6661.py  osc_client_server_6662.py  osc_client_server_6663.py  osc_client_server_6664.py  pinch_probability.py  plotter.py  pressure.py  raycasting.py  request_model.py  sensors.py  touch_sdk
scripts/: oneshot_setup.ps1  oneshot_setup.sh  oneshot_setup_cursor.sh  run_osc_bridge.bat
src/touch_sdk/: __init__.py  ble_connector.py  gatt_connector.py  gatt_scanner.py  multi_connection_client.py  stream_watch.py  utils.py  uuids.py  watch.py  watch_connector.py  watch_manager.py
src/touch_sdk/protobuf/: common_pb2.py  vec_pb2.py  watch_info_pb2.py  watch_input_pb2.py  watch_output_pb2.py
