[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touch-sdk"
version = "0.6.8"
description = "Doublepoint Touch SDK"
license = "ISC"
authors = [
    { name="Doublepoint", email="developer@doublepoint.com" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["bluetooth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Android",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "bleak~=0.20.1",
    "protobuf~=3.20.0",
    "asyncio-atexit~=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/doublepointlab/touch-sdk-py#readme"
"Bug Tracker" = "https://github.com/doublepointlab/touch-sdk-py/issues"
