[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touch-sdk"
version = "0.8.0"
description = "Doublepoint Touch SDK"
license = {file = "LICENSE"}
authors = [
    { name="Doublepoint", email="developer@doublepoint.com" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["bluetooth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Android",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "bleak~=0.22.2",
    "protobuf~=5.28.2",
    "asyncio-atexit~=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/doublepointlab/touch-sdk-py#readme"
"Bug Tracker" = "https://github.com/doublepointlab/touch-sdk-py/issues"
